src/objects/FA_Course_ChatterGroup__c.object
<CustomObject>
    <description>This entity will be used to maintain the relationship between the Course Occurance  and Chatter group</description>
    <fields>
        <fullName>FA_Chatter_Group_Name__c</fullName>
        <description>To store the chatter group name</description>
        <label>Chatter Group Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FA_Course_Occurence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Occurence</label>
        <referenceTo>FA_Course_Occurence__c</referenceTo>
        <relationshipLabel>Course ChatterGroup</relationshipLabel>
        <relationshipName>Chattergroup_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FA_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>FA_Course__c</referenceTo>
        <relationshipLabel>Course ChatterGroup</relationshipLabel>
        <relationshipName>Course_ChatterGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FA_Group_ID__c</fullName>
        <description>To store the record id associated with the Chatter group</description>
        <label>Group ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Course ChatterGroup</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course ChatterGroup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>